# HealthSync

./: db.sqlite3  manage.py  pyproject.toml
SIH_Fitness/: asgi.py  settings.py  urls.py  wsgi.py
fitness/: admin.py  forms.py  models.py  views.py
fitness/migrations/: 0001_initial.py  0002_workout.py  0003_product_cartitem.py  0004_product_type.py  0005_alter_product_type.py  0006_uploadedfile.py  0007_fooditem_calorieintake.py
fitness/static/fitness/: bootstrap.min.css  happy1.jfif  happy2.jfif  logo.jfif  smoothscroll.js  tooplate-gymso-style.css
fitness/templates/fitness/: base.html  bodyfat.html  calorie_tracker.html  cart.html  certify.html  cmgmt.html  ctrainer.html  filter_trainers.html  home.html  location.html  log.html  mental.html  nutrient.html  quiz.html  reqlog.csv  routine.html  supplement.html  tips.html  trainers.csv  trainers.html  tt.html  workoutlog.html  workoutlogging.html
fitness/templates/registration/: login.html  signup.html
